# tw-text-edit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
cmake/: windows.cmake
editor/: tw.bat
editor/themes/: bubblegum-light.ini  gruvbox-light.ini
include/: BearLibTerminal.h
src/: base_types.h  buffer_list.cpp  buffer_list.h  clipboard.cpp  clipboard.h  code_bar.cpp  code_bar.h  color_palette.cpp  color_palette.h  context_menu.cpp  context_menu.h  editor_actions.cpp  editor_actions.h  editor_data.cpp  editor_data.h  helpers.cpp  main.cpp  menu_bar.cpp  menu_bar.h  status_bar.cpp  status_bar.h  syntax_highlight.cpp  syntax_highlight.h  text_buffer.cpp  text_buffer.h  text_dropdown.cpp  text_dropdown.h
src/util/: helpers.h
